name:                cardano-sl
version:             0.4.4
synopsis:            Cardano SL main implementation
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag with-web
  default:     True
  manual:      True

  description: Build with web part.

Flag with-wallet
  default:     True
  manual:      True

  description: Build with wallet.

Flag with-explorer
  default:     False
  manual:      True

  description: Build with explorer

library
  exposed-modules:      Paths_cardano_sl
                        Pos.Aeson
                        Pos.Binary
                        Pos.Block.Arbitrary
                        Pos.Block.BListener
                        Pos.Block.Core
                        Pos.Block.Logic
                        Pos.Block.Network
                        Pos.Block.Pure
                        Pos.Block.RetrievalQueue
                        Pos.Block.Types
                        Pos.CLI
                        Pos.Context
                        Pos.CompileConfig
                        Pos.Communication
                        Pos.Constants

                        Pos.DB.DB
                        Pos.DB.Block
                        Pos.DB.GState

                        Pos.Delegation

                        -- Genesis data
                        Pos.Genesis

                        -- LRC
                        Pos.Lrc
                        Pos.Lrc.FtsPure

                        -- Something
                        Pos.Launcher

                        -- SafeCopy serialization (required in wallet)
                        Pos.SafeCopy

                        -- Something
                        Pos.Security
                        Pos.Security.Class
                        Pos.Security.Workers

                        -- SSC

                        Pos.Ssc.GodTossing
                        Pos.Ssc.SscAlgo

                        -- Statistics
                        Pos.Statistics

                        -- Client
                        Pos.Client.Txp.Balances
                        Pos.Client.Txp.History
                        Pos.Client.Txp.Util

                        -- Txp
                        Pos.Txp

                        Pos.Types

                        -- Update system
                        Pos.Update

                        -- Utilities/helpers
                        Pos.Util
                        Pos.Util.Undefined
                        Pos.Util.BackupPhrase
                        Pos.Util.JsonLog
                        Pos.Util.UserSecret

                        -- Wallets
                        Pos.Wallet.KeyStorage
                        Pos.Wallet.Web.Secret

                        -- Worker, work mode
                        Pos.Worker
                        Pos.WorkMode
                        Pos.WorkMode.Class

                        -- Execution mode
                        Pos.ExecMode
                        Pos.ExecMode.Context
  -- Explorer (TODO: move into cardano-explorer)
  exposed-modules:
                        Pos.Explorer
  if flag(with-web)
    exposed-modules:    Pos.Web
  if flag(with-wallet)
    exposed-modules:    Pos.Wallet
  if flag(with-wallet) && flag(with-web)
    exposed-modules:    Pos.Wallet.Web
  if flag(with-web) || flag(with-explorer)
    exposed-modules:    Pos.Util.Servant
  other-modules:        Pos.Aeson.CompileConfig

                        -- Binary serialization
                        Pos.Binary.Block
                        Pos.Binary.Block.Block
                        Pos.Binary.Block.Core
                        Pos.Binary.Communication
                        Pos.Binary.Delegation
                        Pos.Binary.Relay
                        Pos.Binary.Ssc
                        Pos.Binary.Txp
                        Pos.Binary.Txp.Network

                        -- Block processing
                        Pos.Block.Core.Genesis
                        Pos.Block.Core.Genesis.Chain
                        Pos.Block.Core.Genesis.Lens
                        Pos.Block.Core.Genesis.Misc
                        Pos.Block.Core.Genesis.Types
                        Pos.Block.Core.Main
                        Pos.Block.Core.Main.Chain
                        Pos.Block.Core.Main.Helpers
                        Pos.Block.Core.Main.Lens
                        Pos.Block.Core.Main.Misc
                        Pos.Block.Core.Main.Types
                        Pos.Block.Core.Union
                        Pos.Block.Core.Union.Misc
                        Pos.Block.Core.Union.Types
                        Pos.Block.Error
                        Pos.Block.Logic.Creation
                        Pos.Block.Logic.Header
                        Pos.Block.Logic.Internal
                        Pos.Block.Logic.Slog
                        Pos.Block.Logic.Util
                        Pos.Block.Logic.VAR
                        Pos.Block.Network.Announce
                        Pos.Block.Network.Types
                        Pos.Block.Network.Listeners
                        Pos.Block.Network.Logic
                        Pos.Block.Network.Retrieval
                        Pos.Block.Worker

                        -- Compile config
                        Pos.CompileConfig.Parser
                        Pos.CompileConfig.Type

                        -- NodeContext
                        Pos.Context.Context
                        Pos.Context.Functions

                        -- Crypto
                        Pos.Crypto.HDDiscovery

                        -- Heavy delegation
                        Pos.Delegation.Arbitrary
                        Pos.Delegation.Cede
                        Pos.Delegation.Cede.Class
                        Pos.Delegation.Cede.Logic
                        Pos.Delegation.Cede.Types
                        Pos.Delegation.Cede.Holders
                        Pos.Delegation.Class
                        Pos.Delegation.DB
                        Pos.Delegation.Helpers
                        Pos.Delegation.Listeners
                        Pos.Delegation.Logic
                        Pos.Delegation.Logic.Common
                        Pos.Delegation.Logic.Mempool
                        Pos.Delegation.Logic.VAR
                        Pos.Delegation.Lrc
                        Pos.Delegation.Types
                        Pos.Delegation.Worker

                        -- Launcher
                        Pos.Launcher.Launcher
                        Pos.Launcher.Mode
                        Pos.Launcher.Options
                        Pos.Launcher.Param
                        Pos.Launcher.Resource
                        Pos.Launcher.Runner
                        Pos.Launcher.Scenario

                        -- Network
                        Pos.Communication.Types
                        Pos.Communication.Message
                        Pos.Communication.Methods
                        Pos.Communication.Tx
                        Pos.Communication.Server
                        Pos.Communication.Limits
                        Pos.Communication.Update

                        -- DB
                        Pos.DB.GState.BlockExtra
                        Pos.DB.GState.GState
                        Pos.DB.Misc

                        -- LRC
                        Pos.Lrc.Consumers
                        Pos.Lrc.DB
                        Pos.Lrc.DB.Leaders
                        Pos.Lrc.DB.Lrc
                        Pos.Lrc.DB.Richmen
                        Pos.Lrc.Logic
                        Pos.Lrc.Worker

                        Pos.Recovery.Instance

                        -- SSC
                        Pos.Ssc.Util

                        -- Statistics
                        Pos.Statistics.Ekg
                        Pos.Statistics.Statsd

                        -- Txp
                        Pos.Txp.Network
                        Pos.Txp.Network.Arbitrary
                        Pos.Txp.Network.Listeners
                        Pos.Txp.Network.Types
                        Pos.Txp.Worker

                        -- Update System
                        Pos.Update.Download
                        Pos.Update.Network
                        Pos.Update.Network.Listeners
                        Pos.Update.Worker

                        -- Wallet (intentionally separated, not alphabetically)
                        Pos.Wallet.Web.Error.Types
                        Pos.Wallet.Web.Util

  -- Explorer (TODO: move into cardano-explorer)
  other-modules:        Pos.Binary.Explorer
                        Pos.Explorer.Core
                        Pos.Explorer.Core.Types
                        Pos.Explorer.Txp
                        Pos.Explorer.Txp.Global
                        Pos.Explorer.Txp.Local
                        Pos.Explorer.Txp.Toil
                        Pos.Explorer.Txp.Toil.Class
                        Pos.Explorer.Txp.Toil.Logic
                        Pos.Explorer.Txp.Toil.Types
                        Pos.Explorer.DB

  if flag(with-web)
    other-modules:      Pos.Aeson.Crypto
                        Pos.Aeson.Types
                        Pos.Web.Api
                        Pos.Web.Mode
                        Pos.Web.Server
                        Pos.Web.Types
  if flag(with-wallet)
    exposed-modules:
                        Pos.Wallet.Redirect
                        Pos.Wallet.WalletMode
                        Pos.Wallet.SscType
  if (flag(with-wallet) && flag(with-web))
    other-modules:      Pos.Aeson.ClientTypes
                        Pos.Wallet.Web.Account
                        Pos.Wallet.Web.Api
                        Pos.Wallet.Web.BListener
                        Pos.Wallet.Web.ClientTypes
                        Pos.Wallet.Web.Error
                        Pos.Wallet.Web.Error.Util
                        Pos.Wallet.Web.Mode
                        Pos.Wallet.Web.Server
                        Pos.Wallet.Web.Server.Methods
                        Pos.Wallet.Web.Server.Full
                        Pos.Wallet.Web.Server.Sockets
                        Pos.Wallet.Web.State
                        Pos.Wallet.Web.State.Acidic
                        Pos.Wallet.Web.State.State
                        Pos.Wallet.Web.State.Storage
                        Pos.Wallet.Web.Tracking

  build-depends:        IfElse
                      , QuickCheck
                      , acid-state
                      , aeson >= 0.11.2.1
                      , ansi-terminal
                      , async
                      , base
                      , base58-bytestring
                      , base64-bytestring
                      , binary
                      , binary-conduit >= 1.2.4.1
                      , binary-orphans
                      , bytestring
                      , cardano-crypto
                      , cardano-report-server >= 0.1.1
                      , cardano-sl-core
                      , cardano-sl-db
                      , cardano-sl-godtossing
                      , cardano-sl-infra
                      , cardano-sl-lrc
                      , cardano-sl-ssc
                      , cardano-sl-txp
                      , cardano-sl-update
                      , cereal
                      , conduit >= 1.2.8
                      , containers
                      , cryptonite >= 0.23 && <= 0.23
                      , cryptonite-openssl >= 0.6
                      , data-default
                      , deepseq
                      , derive
                      , deriving-compat
                      , digest
                      , directory
                      , dlist
                      , ed25519
                      , ekg
                      , ekg-core
                      , ekg-statsd
                      , ether >= 0.5
                      , exceptions
                      , file-embed >= 0.0.10
                      , filelock >= 0.1.0.1
                      , filepath
                      , focus
                      , formatting
                      , generic-arbitrary
                      , gitrev
                      , hashable
                      , http-client
                      , http-client-tls
                      , http-conduit
                      , kademlia
                      , lens
                      , lifted-async
                      , list-t
                      , log-warper >= 1.1.1
                      , lrucache
                      , memory
                      , mmorph
                      , monad-control
                      , monad-loops
                      , mono-traversable
                      , mtl
                      , neat-interpolation
                      , network-info >= 0.2.0.8
                      , network-transport-tcp
                      , node-sketch >= 0.1.0.0
                      , optparse-applicative
                      , optparse-simple
                      , parsec
                      , plutus-prototype
                      , pvss
                      , quickcheck-instances
                      , random
                      , reflection
                      , resourcet
                      , rocksdb-haskell >= 1.0.0
                      , safecopy
                      , serokell-util >= 0.1.3.4
                      , stm
                      , stm-containers
                      , store
                      , tagged
                      , template-haskell
                      , temporary >= 1.2.0.4
                      , text
                      , text-format
                      , th-lift-instances
                      , time
                      , time-units
                      , transformers
                      , transformers-base
                      , transformers-lift
                      , turtle
                      , universum >= 0.1.11
                      , unordered-containers
                      , vector
                      , wreq
                      , yaml

  if !os(windows)
    build-depends:      unix

  if flag(with-web)
    build-depends:      http-types
                      , servant >= 0.8.1
                      , servant-multipart >= 0.10
                      , servant-server >= 0.8.1
                      , wai
                      , wai-extra
                      , warp
                      , websockets
                      , wai-websockets
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  -- for explorer linking see https://ghc.haskell.org/trac/ghc/ticket/13810
  if os(linux) && !flag(with-explorer)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(with-web)
    cpp-options: -DWITH_WEB
  if flag(with-wallet)
    cpp-options: -DWITH_WALLET
  if flag(with-explorer)
    cpp-options: -DWITH_EXPLORER

executable cardano-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  other-modules:       NodeOptions
                     , Params
                     , Secrets
  build-depends:       base
                     , ansi-wl-pprint
                     , binary
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-lrc
                     , cardano-sl-update
                     , cardano-sl-ssc
                     , cardano-sl
                     , containers
                     , data-default
                     , directory
                     , ether
                     , filepath
                     , formatting
                     , lens
                     , log-warper
                     , mtl
                     , network-transport
                     , node-sketch
                     , network-transport-tcp
                     , optparse-simple
                     , parsec
                     , serokell-util >= 0.1.3.4
                     , stm-containers
                     , string-qq
                     , time
                     , time-units
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(with-web)
    cpp-options: -DWITH_WEB
  if flag(with-wallet)
    cpp-options: -DWITH_WALLET

test-suite cardano-test
  main-is:             Test.hs
  other-modules:
                       -- Standard module with some magic
                       Spec

                       -- Something
                       Test.Pos.Arbitrary.Infra
                       Test.Pos.Arbitrary.Infra.Communication
                       Test.Pos.Arbitrary.Infra.DHT
                       Test.Pos.BinarySpec

                       -- Pos.Block testing
                       Test.Pos.Block.Identity.BinarySpec
                       Test.Pos.Block.Identity.SafeCopySpec
                       Test.Pos.Block.Logic.CreationSpec
                       Test.Pos.Block.Logic.Mode
                       Test.Pos.Block.Logic.VarSpec

                       -- Everything else
                       Test.Pos.Communication.Identity.BinarySpec
                       Test.Pos.ConstantsSpec
                       Test.Pos.Core.AddressSpec
                       Test.Pos.CryptoSpec
                       Test.Pos.DHT.Identity.BinarySpec
                       Test.Pos.FollowTheSatoshiSpec
                       Test.Pos.Genesis.Identity.BinarySpec
                       Test.Pos.MerkleSpec
                       Test.Pos.Script.Identity.BinarySpec
                       Test.Pos.Ssc.GodTossing.ComputeSharesSpec
                       Test.Pos.Ssc.GodTossing.Identity.BinarySpec
                       Test.Pos.Ssc.GodTossing.Identity.SafeCopySpec
                       Test.Pos.Ssc.GodTossing.SeedSpec
                       Test.Pos.Ssc.GodTossing.Toss.BaseSpec
                       Test.Pos.Ssc.GodTossing.VssCertDataSpec
                       Test.Pos.Txp.CoreSpec
                       Test.Pos.Txp.Identity.BinarySpec
                       Test.Pos.Txp.Toil.UtxoSpec
                       Test.Pos.Types.BlockSpec
                       Test.Pos.Types.CoinSpec
                       Test.Pos.Types.Identity.BinarySpec
                       Test.Pos.Types.Identity.SafeCopySpec
                       Test.Pos.Types.Identity.ShowReadSpec
                       Test.Pos.Types.SeedSpec
                       Test.Pos.Types.SlottingSpec
                       Test.Pos.Update.Identity.BinarySpec
                       Test.Pos.Update.Identity.SafeCopySpec
                       Test.Pos.Update.MemStateSpec
                       Test.Pos.Update.PollSpec
                       Test.Pos.Util
                       Test.Pos.Util.LimitsSpec
                       Test.Pos.Util.ModifierSpec
                       Test.Pos.UtilSpec
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-db
                     , cardano-sl-infra
                     , cardano-sl-lrc
                     , cardano-sl-txp
                     , cardano-sl-update
                     , cardano-sl-ssc
                     , cardano-sl
                     , cereal
                     , containers
                     , cryptonite
                     , data-default
                     , derive
                     , ether
                     , formatting
                     , hspec
                     , kademlia
                     , lens
                     , log-warper
                     , memory
                     , mtl
                     , node-sketch
                     , pvss
                     , quickcheck-instances
                     , random
                     , reflection
                     , regex-tdfa
                     , regex-tdfa-text
                     , safecopy
                     , serokell-util >= 0.1.3.4
                     , store
                     , tagged
                     , temporary
                     , text-format
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers
                     , vector
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark cardano-bench-criterion
  hs-source-dirs:      bench
  main-is:             Local/Criterion.hs
  other-modules:       Bench.Pos.Criterion.FollowTheSatoshiBench
                       Bench.Pos.Criterion.TxSigningBench
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , cardano-sl-core
                     , cardano-sl-txp
                     , cardano-sl
                     , containers
                     , criterion
                     , derive
                     , formatting
                     , hashtables
                     , lens
                     , log-warper
                     , serokell-util >= 0.1.3.4
                     , text-format
                     , universum >= 0.1.11
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
