name:                node-sketch
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
category:            Network
build-type:          Simple
cabal-version:       >=1.20

Library
  exposed-modules:      Network.Discovery.Abstract
                        Network.Discovery.Transport.InMemory
                        Network.Discovery.Transport.Kademlia
                        Network.Transport.Abstract
                        Network.Transport.Concrete

                        Node

                        Mockable.Channel
                        Mockable.Class
                        Mockable.Concurrent
                        Mockable.Exception
                        Mockable.Production
                        Mockable.SharedAtomic
  other-modules:        Node.Internal

  build-depends:        base
                      , containers
                      , binary >= 0.8
                      , bytestring
                      , random
                      , deepseq
                      , hashable
                      , kademlia
                      , network-transport
                      , network-transport-inmemory
                      , stm
                      , transformers
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications

executable ping-pong
  main-is:              PingPong.hs
  build-depends:        base >= 4.8 && < 5
                      , binary
                      , network-transport-inmemory
                      , network-transport-tcp
                      , node-sketch
                      , random

  hs-source-dirs:       examples
  default-language:     Haskell2010
  ghc-options:          -threaded -Wall -fno-warn-orphans
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications

executable discovery
  main-is:              Discovery.hs
  build-depends:        base >= 4.8 && < 5
                      , binary
                      , bytestring
                      , containers
                      , network-transport-inmemory
                      , network-transport-tcp
                      , node-sketch
                      , random

  hs-source-dirs:       examples
  default-language:     Haskell2010
  ghc-options:          -threaded -Wall -fno-warn-orphans
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
