name:                node-sketch
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Network
build-type:          Simple
cabal-version:       >=1.20

flag benchmarks
  description:       Build benchmarks
  default:           False
  manual:            True

Library
  exposed-modules:      Network.Discovery.Abstract
                        Network.Discovery.Transport.Kademlia
                        Network.Transport.Abstract
                        Network.Transport.Concrete

                        Node

                        Mockable.Channel
                        Mockable.Class
                        Mockable.Concurrent
                        Mockable.Exception
                        Mockable.Production
                        Mockable.SharedAtomic

                        Message.Message

                        Node.Internal

                        NTP.Client
                        NTP.Example

  other-modules:        NTP.Packet
                        NTP.Util

  build-depends:        base
                      , containers
                      , binary >= 0.8
                      , bytestring
                      , deepseq
                      , data-default
                      , exceptions
                      , formatting
                      , hashable
                      , kademlia
                      , lens
                      , log-warper
                      , monad-control
                      , mtl
                      , network
                      , network-transport
                      , network-transport-inmemory
                      , mtl >= 2.2.1
                      , random
                      , serokell-util
                      , stm
                      , text
                      , time
                      , time-units
                      , transformers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards

executable discovery
  main-is:              Discovery.hs
  build-depends:        base >= 4.8 && < 5
                      , binary
                      , bytestring
                      , containers
                      , network-transport-inmemory
                      , network-transport-tcp
                      , node-sketch
                      , random

  hs-source-dirs:       examples
  default-language:     Haskell2010
  ghc-options:          -threaded -Wall -fno-warn-orphans
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards

executable ping-pong
  main-is:             PingPong.hs
  build-depends:       base >= 4.8 && < 5
                     , binary
                     , network-transport-inmemory
                     , network-transport-tcp
                     , node-sketch
                     , random
                     , stm

  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  DeriveGeneric
                       DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       OverloadedStrings
                       RecordWildCards

executable bench-sender
  main-is:             Main.hs
  other-modules:       Bench.Network.Commons
                       SenderOptions
  build-depends:       async >= 2.1
                     , attoparsec >= 0.13.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , bytestring >= 0.10.6.0
                     , data-default >= 0.7
                     , directory >= 1.2.6
                     , exceptions >= 0.8.2.1
                     , extra >= 1.4
                     , formatting
                     , hslogger
                     , lens
                     , lifted-base
                     , log-warper >= 0.2.0
                     , MonadRandom >= 0.4.2.3
                     , monad-control >= 1.0.1
                     , mtl
                     , network-transport-tcp >= 0.5.1
                     , node-sketch
                     , optparse-simple >= 0.0.3
                     , serokell-util
                     , stm
                     , random >= 1.1
                     , text-format >= 0.3.1
                     , time >= 1.6
                     , time-units >= 1.0.0
                     , transformers >= 0.5.2
                     , unordered-containers >= 0.2.7
  hs-source-dirs:      bench/Network/Sender
                     , bench/Network/Common
  if flag(benchmarks)
    buildable:         True
  else
    buildable:         False
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable bench-receiver
  main-is:             Main.hs
  other-modules:       Bench.Network.Commons
                       ReceiverOptions
  build-depends:       attoparsec >= 0.13.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , bytestring >= 0.10.6.0
                     , data-default >= 0.7
                     , directory >= 1.2.6
                     , exceptions >= 0.8.2.1
                     , formatting
                     , hslogger
                     , lifted-base
                     , log-warper >= 0.2.0
                     , mtl
                     , network-transport-tcp >= 0.5.1
                     , node-sketch
                     , optparse-simple >= 0.0.3
                     , random >= 1.1
                     , serokell-util
                     , stm
                     , text-format >= 0.3.1
                     , time >= 1.6
                     , time-units >= 1.0.0
                     , unordered-containers >= 0.2.7
  hs-source-dirs:      bench/Network/Receiver
                     , bench/Network/Common
  if flag(benchmarks)
    buildable:         True
  else
    buildable:         False
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable bench-log-reader
  main-is:             Main.hs
  other-modules:       Bench.Network.Commons
                       LogReaderOptions
  build-depends:       attoparsec >= 0.13.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.7
                     , data-default >= 0.7
                     , directory >= 1.2.6
                     , exceptions >= 0.8.2.1
                     , formatting
                     , hslogger
                     , log-warper >= 0.2.0
                     , lens >= 4.14
                     , mtl
                     , network-transport-tcp >= 0.5.1
                     , node-sketch
                     , optparse-simple >= 0.0.3
                     , resourcet >= 1.1.7
                     , stm
                     , text >= 1.2.2
                     , text-format >= 0.3.1
                     , time >= 1.6
                     , time-units >= 1.0.0
                     , unordered-containers >= 0.2.7
  hs-source-dirs:      bench/Network/LogReader
                     , bench/Network/Common
  if flag(benchmarks)
    buildable:         True
  else
    buildable:         False
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

test-suite node-sketch-test
  main-is:             Test.hs
  other-modules:       Spec
                       Test.NodeSpec
                       Test.Util
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.8 && < 5
                     , binary
                     , bytestring >= 0.10.8
                     , containers >= 0.5.7
                     , hspec >= 2.1.10
                     , lens >= 4.14
                     , mtl >= 2.2.1
                     , network-transport-inmemory
                     , network-transport-tcp
                     , node-sketch
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , serokell-util >= 0.1.2.3
                     , stm
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
