name:                node-sketch
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Network
build-type:          Simple
cabal-version:       >=1.20

flag benchmarks
  description:       Build benchmarks
  default:           False
  manual:            True

Library
  exposed-modules:      Network.Discovery.Abstract
                        Network.Discovery.Transport.Kademlia
                        Network.Transport.Abstract
                        Network.Transport.Concrete

                        Node

                        Mockable
                        Mockable.Channel
                        Mockable.Class
                        Mockable.Concurrent
                        Mockable.CurrentTime
                        Mockable.Exception
                        Mockable.Instances
                        Mockable.Monad
                        Mockable.Production
                        Mockable.SharedAtomic

                        Node.Internal
                        Node.Message

                        NTP.Client
                        NTP.Example

                        Bench.Network.Commons

  other-modules:        NTP.Packet
                        NTP.Util

  build-depends:        async
                      , attoparsec
                      , base
                      , containers
                      , binary >= 0.8
                      , bytestring
                      , deepseq
                      , data-default
                      , exceptions
                      , formatting
                      , hashable
                      , kademlia
                      , lens
                      , log-warper
                      , mmorph
                      , monad-control
                      , mtl
                      , network
                      , network-transport
                      , network-transport-inmemory
                      , mtl >= 2.2.1
                      , random
                      , universum
                      , serokell-util
                      , stm
                      , text
                      , text-format
                      , time
                      , time-units
                      , time-warp
                      , transformers
                      , unordered-containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards

executable discovery
  main-is:              Discovery.hs
  build-depends:        base >= 4.8 && < 5
                      , binary
                      , bytestring
                      , containers
                      , network-transport-inmemory
                      , network-transport-tcp
                      , node-sketch
                      , random
                      , time-units

  hs-source-dirs:       examples
  default-language:     Haskell2010
  ghc-options:          -threaded -Wall -fno-warn-orphans
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards

executable ping-pong
  main-is:             PingPong.hs
  build-depends:       base >= 4.8 && < 5
                     , binary
                     , network-transport-inmemory
                     , network-transport-tcp
                     , node-sketch
                     , random
                     , stm
                     , time-units

  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  DeriveGeneric
                       DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       OverloadedStrings
                       RecordWildCards

executable bench-sender
  main-is:             Main.hs
  other-modules:       SenderOptions
  build-depends:       base == 4.*
                     , lens
                     , log-warper
                     , MonadRandom
                     , mtl
                     , network-transport-tcp
                     , node-sketch
                     , optparse-simple >= 0.0.3
                     , random
                     , serokell-util
                     , time-units
  hs-source-dirs:      bench/Sender
  if flag(benchmarks)
    buildable:         True
  else
    buildable:         False
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                       RecordWildCards
                       DeriveDataTypeable
                       GeneralizedNewtypeDeriving

executable bench-receiver
  main-is:             Main.hs
  other-modules:       ReceiverOptions
  build-depends:       base == 4.*
                     , log-warper
                     , network-transport-tcp
                     , node-sketch
                     , optparse-simple
                     , random
                     , serokell-util
                     , time-units
  hs-source-dirs:      bench/Receiver
  if flag(benchmarks)
    buildable:         True
  else
    buildable:         False
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable bench-log-reader
  main-is:             Main.hs
  other-modules:       LogReaderOptions
  build-depends:       attoparsec
                     , base == 4.*
                     , conduit
                     , conduit-extra
                     , containers
                     , exceptions
                     , formatting
                     , lens
                     , log-warper
                     , mtl
                     , node-sketch
                     , optparse-simple
                     , resourcet
                     , text
                     , text-format
  hs-source-dirs:      bench/LogReader
  if flag(benchmarks)
    buildable:         True
  else
    buildable:         False
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

test-suite node-sketch-test
  main-is:             Test.hs
  other-modules:       Spec
                       Test.NodeSpec
                       Test.Util
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.8 && < 5
                     , binary
                     , bytestring >= 0.10.8
                     , containers >= 0.5.7
                     , hspec >= 2.1.10
                     , lens >= 4.14
                     , mtl >= 2.2.1
                     , network-transport-inmemory
                     , network-transport-tcp
                     , node-sketch
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , serokell-util >= 0.1.2.3
                     , stm
                     , time-units
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
